fix: add scroll in modal

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="body">
     <header class="navbar navbar--mobile-fixed">
       <div class="container">
         <div class="navbar-top">
@@ -1186,53 +1186,56 @@
     <div class="modal">
       <div class="modal__overlay"></div>
       <!-- /.modal__overlay -->
-      <div class="modal__dialog">
-        <a href="#" class="modal__close">
-          <img src="image/close.svg" alt="Icon: close" />
-        </a>
-        <h3 class="modal__title">Booking</h3>
-        <form class="modal__form form" action="send.php" method="POST">
-          <input
-            type="text"
-            class="input modal__input"
-            placeholder="Your Full Name*"
-            name="name"
-            minlength="2"
-            maxlength="20"
-            required
-          />
-          <input
-            type="tel"
-            class="input modal__input"
-            placeholder="Phone Number*"
-            name="phone"
-            required
-          />
-          <input
-            type="email"
-            class="input modal__input"
-            placeholder="Email*"
-            name="email"
-            required
-          />
-          <textarea
-            class="modal__message"
-            placeholder="Message"
-            name="message"
-          ></textarea>
-          <div class="modal__footer">
-            <button
-              data-toggle="modal"
-              class="button modal__button"
-              type="submit"
-            >
-              Send
-            </button>
-            <span class="modal__info">* Required Fields</span>
-          </div>
-        </form>
+      <div class="modal-container">
+        <div id="element-1" class="modal__dialog">
+          <a href="#" class="modal__close">
+            <img src="image/close.svg" alt="Icon: close" />
+          </a>
+          <h3 class="modal__title">Booking</h3>
+          <form class="modal__form form" action="send.php" method="POST">
+            <input
+              type="text"
+              class="input modal__input"
+              placeholder="Your Full Name*"
+              name="name"
+              minlength="2"
+              maxlength="20"
+              required
+            />
+            <input
+              type="tel"
+              class="input modal__input"
+              placeholder="Phone Number*"
+              name="phone"
+              required
+            />
+            <input
+              type="email"
+              class="input modal__input"
+              placeholder="Email*"
+              name="email"
+              required
+            />
+            <textarea
+              class="modal__message"
+              placeholder="Message"
+              name="message"
+            ></textarea>
+            <div class="modal__footer">
+              <button
+                data-toggle="modal"
+                class="button modal__button"
+                type="submit"
+              >
+                Send
+              </button>
+              <span class="modal__info">* Required Fields</span>
+            </div>
+          </form>
+        </div>
+        <!-- /.modal__dialog -->
       </div>
-      <!-- /.modal__dialog -->
+      <!-- /.modal-container -->
     </div>
     <a class="up" href="#"
       ><img class="up" src="image/up.svg" alt="Icon: Up"
